<resources>
    <string name="app_name">NewsAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="article">Article</string>
    <string name="categories">Categories</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
</resources>