<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A191E"
        tools:context=".ui.fragments.CategoriesFragment">

    <TextView
            android:text="@string/categories"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:background="#1A191E"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:gravity="center" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:background="@drawable/background">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    android:id="@+id/cvSports"
                    app:cardCornerRadius="30dp"
                    tools:ignore="NestedWeights">

                <TextView
                        android:text="@string/sports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/sports"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    android:id="@+id/cvTechnology"
                    app:cardCornerRadius="30dp">

                <TextView
                        android:text="@string/technology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/technology"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    app:cardCornerRadius="30dp"
                    android:id="@+id/cvScience"
                    tools:ignore="NestedWeights">

                <TextView
                        android:text="@string/science"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/science"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    android:id="@+id/cvHealth"
                    app:cardCornerRadius="30dp">

                <TextView
                        android:text="@string/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/health"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    android:id="@+id/cvBusiness"
                    app:cardCornerRadius="30dp"
                    tools:ignore="NestedWeights">

                <TextView
                        android:text="@string/business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/business"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:backgroundTint="#1A191E"
                    android:id="@+id/cvEntertainment"
                    app:cardCornerRadius="30dp">

                <TextView
                        android:text="@string/entertainment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_margin="16dp" />

                <ImageView
                        android:src="@drawable/entertainment"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/sports" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>